# oca_nats_config

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docker/nats/: NOTES.md  docker-compose.yaml  nats.conf  nats.service
oca_nats_config/: build_streams.py  config.yaml  defined_streams.py  defined_streams_method.py  main.py  singleton_config.py  stream_property.py
scripts/: auto_update.sh  oca_nats_config_update.service  oca_nats_config_update.timer
